<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TambahUtangActivity" >

    <TextView
        android:id="@+id/NameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_name" />

    <TextView
        android:id="@+id/OweText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/NameText"
        android:layout_below="@+id/NameText"
        android:layout_marginTop="15dp"
        android:text="@string/text_owe" />

    <TextView
        android:id="@+id/tanggaljth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/OweText"
        android:layout_below="@+id/OweText"
        android:layout_marginTop="15dp"
        android:text="@string/text_amounttime" />

    <EditText
        android:id="@+id/EditName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/NameText"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@+id/tanggaljth"
        android:hint="@string/hint_addname"
        android:singleLine="true" />

    <EditText
        android:id="@+id/EditOwe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/OweText"
        android:layout_alignBottom="@+id/OweText"
        android:layout_alignStart="@+id/EditName"
        android:hint="@string/hint_adduang"
        android:inputType="numberDecimal|phone"
        android:singleLine="true" />

    <EditText
        android:id="@+id/EditTanggaljth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tanggaljth"
        android:layout_alignBottom="@+id/tanggaljth"
        android:layout_alignStart="@+id/EditOwe"
        android:hint="@string/hint_time" />

    <TextView
        android:id="@+id/textEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@+id/buttonSave"
        android:layout_marginBottom="15dp"
        android:text="@string/noempty"/>

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_save" />

</RelativeLayout>